--- a/styles/rd.css
+++ b/styles/rd.css
@@ -72,9 +72,8 @@ a {
 }
 
 h1 {
-  font-size: 500%;
-  font-weight: bold;
-  color: #e7e6ed;
+    font-size: 150%;
+    color: white;
 }
 
 h2 {
@@ -94,7 +93,7 @@ h4 {
     font-size: 14px;
 }
 
-body > header, main, body > footer {
+main, body > footer {
     width: 100%;
     margin: 0px auto;
 }
@@ -106,7 +105,6 @@ body > header, main, body > footer {
 
 main{
     min-height: calc(100vh - 42px - 200px - 50px - 30px - 20px - 10px);
-    margin-bottom: 30px;
 }
 
 main#article{
@@ -151,7 +149,7 @@ nav {
     top: 0px;
     width: 100%;
     height: 40px;
-    font-size: 90%;
+    font-size: 100%;
 }
 
 nav > ul {
@@ -159,30 +157,80 @@ nav > ul {
     text-align: right;
 }
 
-nav ul li:hover {
-    background: #ceced5;
-    transition: background 0.4s linear 0s;
-    border-radius: 10px;
-}
 
 nav > ul > li {
     text-align: left;
     display: inline-block;
-    width: 10%;
+    margin: 0px 2.5% 0px 2.5%;
 }
 
 nav > ul > li:first-child {
     float: left;
+    font-weight: bold;
 }
 
+nav li:first-child a {
+    color: #2c83ca;
+}
 
-nav a[href], nav a[href]:visited {
+nav a[href] {
     display: block;
     color: black;
-    transition: background 0.4s linear 0s;
-    padding: 18px 3px 18px;
+    margin: 18px 0px 18px 0px;
     text-align: center;
 }
+
+nav a, a:link, a:visited {
+  position: relative;
+}
+
+nav a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  left:0;
+  background-image: linear-gradient(90deg, rgb(36, 105, 179), rgb(36, 142, 212));
+  background-size: 0 2px;
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  transition: background-size .3s ease-in;
+}
+
+nav a:hover::before {
+  background-size: 100% 2px;
+}
+
+.bandeau {
+    background-color: #2c83ca;
+    color:white;
+    padding: 8px;
+    --gap: 20px;
+    display: flex;
+    gap: var(--gap);
+}
+
+.bandeau ul {
+    flex-shrink: 0;
+    display: flex;
+    gap: var(--gap);
+    animation: scroll 50s linear infinite;
+}
+
+.bandeau:hover ul {
+    animation-play-state: paused;
+}
+
+@keyframes scroll {
+  to {
+    transform: translateX(calc(-100% - var(--gap)));
+  }
+}
+
+
+
+
 
 
 /**********************************************************************
@@ -190,28 +238,49 @@ nav a[href], nav a[href]:visited {
 **********************************************************************/
 
 
-.image-container {
-  height: 80%;
-  margin: 60px 2.5%;
+
+
+header img {
+  width: 95%;
+  height: 440px;
+  margin-top: 92px;
+  margin-left: 2.5%;
+  border-radius: 20px;
 }
 
-.image-container .imageFond {
-
-  height: 100%;
+.cover {
   object-fit: cover;
-  border-radius: 35px;
 }
 
-.imageTitre {
+.imgTitre {
     position: absolute;
-    width:50%;
+    left: 0;
+    height: auto;
+    width: 50%;
+    margin: 170px 0px 0px 5%;
+}
+
+header a{
+    color: #eb6724;
+    background-color: white;
+    padding: 15px;
+    font-size: 70%;
+    border-radius: 25px;
+    border: solid #eb6724;
+    margin-left: 40px;
+    font-weight: bold;
+}
+
+header a:hover{
+    background: #ff9f5f;
+    border: solid #ed7b2e;
+    transition: background 0.4s linear 0s;
+    color: white;
 }
 
 header h1 {
-  position: absolute;
-  top: 500px;
-  left: 100px;
-  width: 70%;
+    position: absolute;
+    margin: -80px 0px 0px 73px;
 }
 
 /****************************************************************
@@ -248,31 +317,46 @@ footer a:hover{
 /****************************************************************** 
                         Sections
 *******************************************************************/
-section {   
+
+section{
     padding: 80px;
 }
-
 section:nth-child(1) > p{
     text-align: center; 
 }
 
-section:nth-child(2){
-    background-color: #ff9f5f   
-}
-
 section:nth-child(3){
-    background-color: #51bfff;   
+    border-image: fill 0 linear-gradient(150deg, transparent, #ff942f 50%);
+    background: url(../images/fondOrange.jpg) center/cover;
+    color:rgb(73, 29, 0);
+    padding-left: 40%; 
+    text-align: right;
 }
 
 
-.product-card {
+section:nth-child(4){
+    border-image: fill 0 linear-gradient(350deg, transparent, #1059cf 50%);
+    background: url(../images/fondBleu.png) center/cover;
+    color:rgb(6, 0, 73);
+    padding-right: 40%;
+}
+
+
+.bandeauEvent li {
     background-color: rgb(189, 189, 189);
-    width: 450px;
-    height: 300px;
+    width: 400px;
+    height: 150px;
     float: none;
     display: inline-block;
     border-radius: 10px;
     margin-right: 70px;
+    padding: 40px;
+}
+
+.bandeauEvent li img{
+    position: absolute;
+    display: flex;
+    margin-left: 300px;
 }
 
 .googleMap {
